--- a/less/main.less
+++ b/less/main.less
@@ -780,7 +780,6 @@ nav {
   }
 
   .contact-details {
-    width: 100%;
     position: relative;
     margin: 0 auto 40px auto;
     .at2x('../img/map-406.png');
